# undogmatic

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CANDID_CRITIQUE.md  LICENSE  README.md  TODO.md  WHITEPAPER.md  pyproject.toml
.github/workflows/: ci.yml
apps/shame_heatmap/: README.md  app.py  requirements.txt
apps/shame_heatmap/banks/: en.json  pt.json
data/: prototypes.txt
data/curated/: ab_pairs.jsonl  control_samples.jsonl  temas_seed.jsonl
docs/: shame_direction_visualization.md
reports/: ab_test.md  authority_reliance_index.md  report.md
scripts/: build_dataset.py  fetch_stf.py  fetch_stj.py  make_ab_pairs.py  run_ab_test.py
tests/: test_control_samples.py  test_eval_ab.py  test_llm_scorer.py  test_make_ab_pairs.py  test_patterns.py  test_scoring.py
undogmatic/: __init__.py  control_samples.py  embed_scorer.py  eval_ab.py  llm_scorer.py  patterns.py  prompts.py  scoring.py  utils.py
