[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "undogmatic"
version = "0.1.0"
description = "POC para avaliação de ShameScore em teses STF/STJ"
readme = "README.md"
authors = [{ name = "Undogmatic" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "pydantic>=2.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "tqdm>=4.65",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
include = ["undogmatic*"]
exclude = ["tests*", "scripts*", "data*", "reports*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1.9",
    "black>=23.12",
    "isort>=5.12",
    "pre-commit>=3.5",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
